[package]
name = "lineup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["cargo", "derive"] }
clap_complete = "4.4.4"
clap_derive = "4.4.7"
cmd_lib = "1.9.3"
csv = "1.3.0"
env_logger = "0.11.3"
file-lock = "2.1.10"
inquire = "0.7.5"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["kv_serde"] }
once_cell = "1.19.0"
rayon = "1.8.0"
rayon-cond = "0.3.0"
regex = "1.10.2"
rust-embed = "8.2.0"
scopeguard = "1.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
shellexpand = "3.1.0"
tera = "1.19.1"
thiserror = "1.0.51"
toml = "0.8.8"
